--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,20 +1,27 @@
-{
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "build",
-            "type": "shell",
-            "command": "g++",
-            "args": [
-              "-g", "string.cpp",
-              "-o", "string.exe"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
+    {
+        "version": "2.0.0",
+        "tasks": [
+            {
+                "label": "msvc build",
+                "type": "shell",
+                "command": "cl.exe",
+                "args": [
+                    "/EHsc",
+                    "/Zi",
+                    "/Fe:",
+                    "helloworld.exe",
+                    "helloworld.cpp"
+                ],
+                "group":  {
+                    "kind": "build",
+                    "isDefault": true
+                },
+                "presentation": {
+                    "reveal":"always"
+                },
+                "problemMatcher": "$msCompile"
             }
-        }
-    ]
-}
+        ]
+    }
